RESOLVED FIXED 47564
AX: accessibilityIsIgnored not respected on ARIA tables
https://bugs.webkit.org/show_bug.cgi?id=47564
Summary AX: accessibilityIsIgnored not respected on ARIA tables
chris fleizach
Reported 2010-10-12 17:24:34 PDT
If you have an ARIA table, but your platform doesn't want to include column headers, there you're out of luck right now AccessibilityTable.cpp filters out those elements, but AccessibilityARIAGrid.cpp does not. This affects GTK and iOS
Attachments
patch (4.78 KB, patch)
2010-10-13 14:09 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-10-13 14:09:07 PDT
chris fleizach
Comment 2 2010-10-13 15:53:55 PDT
chris fleizach
Comment 3 2010-10-13 16:29:23 PDT
So it looks like GTK has erroneous code which is causing the results from the layout test to not be what should be there. i will file a bug
chris fleizach
Comment 4 2010-10-13 16:32:47 PDT
Hayato Ito
Comment 5 2010-10-14 01:43:40 PDT
It seems that http://trac.webkit.org/changeset/69707 contains a test that doesn't have an expected result. Therefore I've added that test to a gtk's 'Skipped' file as in http://trac.webkit.org/changeset/69751 to fix a build.
Hayato Ito
Comment 6 2010-10-14 04:05:51 PDT
The previous patch lacked 'platform/gtk' prefix. I landed another patch: http://trac.webkit.org/changeset/69756.
Hayato Ito
Comment 7 2010-10-14 06:46:56 PDT
It seems buildbots still complains about that test. I am not sure how to skip platform/gtk/accessibility/aria-table-hierarchy.html. I think it might be better to add an expected text rather than skipping that. (In reply to comment #6) > The previous patch lacked 'platform/gtk' prefix. > I landed another patch: http://trac.webkit.org/changeset/69756.
chris fleizach
Comment 8 2010-10-14 09:17:06 PDT
it should be pretty straight forward to add a skipped test. i was hoping GTK folks would fix the bug, then we could generate the right results and move on. still haven't heard any response on the bug i filed for them, so i'll add this to the skip list
Mario Sanchez Prada
Comment 9 2011-03-30 09:04:37 PDT
The patch and the test looks ok to me but it seems there's another bug in GTK that is preventing the (now skipped) test from passing, and it's that the ARIA table declares not to have any children: PASS table1.role is 'AXRole: table' FAIL table1.rowCount should be 1. Was 0. FAIL table1.columnCount should be 2. Was 0. PASS table2.role is 'AXRole: table' FAIL table2.rowCount should be 3. Was 0. FAIL table2.columnCount should be 2. Was 0. PASS table3.role is 'AXRole: table' FAIL table3.rowCount should be 1. Was 0. FAIL table3.columnCount should be 2. Was 0. PASS table4.role is 'AXRole: table' FAIL table4.rowCount should be 3. Was 0. FAIL table4.columnCount should be 2. Was 0. FAIL children should be 2. Was 0. FAIL children should be 6. Was 0. FAIL children should be 2. Was 0. FAIL children should be 6. Was 0. PASS successfullyParsed is true Looks like theres another bug then, will file it rightaway...
Note You need to log in before you can comment on or make changes to this bug.