AX: accessibilityIsIgnored not respected on ARIA tables https://bugs.webkit.org/show_bug.cgi?id=47564

Reviewed by Beth Dakin.

WebCore:

For platforms that ignore column headers and header container objects (everything
except Mac) on accessibility tables, that choice needs to be respected in
ARIA tables as well.

GTK is the only open platform doing this, so I'll have to collect the result of this
test. It was copied from table-hierarchy.html, but changed to use ARIA tables.

Test: platform/gtk/accessibility/aria-table-hierarchy.html

* accessibility/AccessibilityARIAGrid.cpp:
(WebCore::AccessibilityARIAGrid::addChildren):

LayoutTests:

Will gather the results from GTK after this runs.

* platform/gtk/accessibility/aria-table-hierarchy.html: Added.



Canonical link: https://commits.webkit.org/60298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69707 268f45cc-cd09-0410-ab3c-d52691b4dbfc